twitter lesson and html lesson

--- a/lesson05-web/static/css/mystyles.css
+++ b/lesson05-web/static/css/mystyles.css
@@ -1,6 +1,6 @@
 
 .splash-container {
-    background: url('/static/img/grizz.jpg');
+    background: url('/static/img/stone.png');
     background-size:cover;
     height: 100%;
 }
@@ -46,7 +46,7 @@ button.pure-button-primary {
     color: white;
     letter-spacing: 0.05em;
     opacity: 0.8;
-    font-size: 2.5em;
+    font-size: 1.5em;
 }
 
 .pure-menu-selected .pure-menu-link,
